// Copyright (c) 2021, SafePoint.  All rights reserved.
// Copyright (c) 2018-2019, AT&T Intellectual Property.  All rights reserved.
//
// SPDX-License-Identifier: LGPL-2.1-only
//

syntax="proto2";

message FlowStatFeatConfig {
	optional bool is_active = 1;
	optional string if_name = 2;
}